# vibecheck

./: README.md  pyproject.toml
mastodon_bot/: .env.EXAMPLE  config.py  pyproject.toml  read_rss.py
notebooks/: Filter by tag.ipynb
vibecheck/: create_algo_tags.py  model.py  scrape_mastodon.py
